bin/src/doc/gramatica.txt
//gramatica

program -> ini_block
ini_block -> "ini" "{" statements "}"
statements -> statement statements | statement
statement -> variable_declarationInt | variable_declarationString | assignment | if_statement | for_statement | while_statement | printing
variable_declarationInt -> type identifier "=" expression ";" | type identifier ";"
variable_declarationString -> type identifier "=" string ";" | type identifier ";"
assignment -> identifier "=" expression ";"
if_statement -> "if" "(" condition ")" "{" statements "}"
              | "if" "(" condition ")" "{" statements "}" "else" "{" statements "}"
for_statement -> "for" "(" variable_declaration ";" condition ";" assignment ")" "{" statements "}"
printing -> mostrar "(" identifier ")" ";"
type -> "int"
      | "string"
identifier -> [char][char | number | _]*
expression -> factor operator factor | factor
string -> """ [char+ | " "| number]+ """
number -> [0-9]+
factor -> identifier | number | string |"(" expression ")"
condition -> factor comparison_operator factor
operator -> "+"
          | "-"
          | "*"
          | "/"
          | "^"
            "="
comparison_operator -> ">"
                     | "<"
                     | "=>"
                     | "<="
                     | "=="
                     | "!="
